--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.165",
+    "immer": "^8.0.0",
+    "lodash": "^4.17.20",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -17,7 +21,9 @@
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "jest": "^26.6.3",
     "prettier": "2.2.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   }
 }
